# kafka-streamka

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
kafka_streamka/: __init__.py
